tests/ui/errors/issue-104621-extern-not-file.stderr
error: extern location for foo is not a file: .
  --> $DIR/issue-104621-extern-not-file.rs:3:1
   |
LL | extern crate foo;
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

